# ACraft

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
models/: camera.blend  camera.blend1
src/: Block.cpp  Block.h  Camera.cpp  Camera.h  ShaderProg.cpp  ShaderProg.h  Texture.cpp  Texture.h  blocks.cpp  blocks.h  callbacks.cpp  callbacks.h  common.h  main.cpp  obj.cpp  obj.h
src/shaders/: block_inst.frag.glsl  block_inst.vert.glsl  cam_model.frag.glsl  cam_model.vert.glsl  main.frag.glsl  main.vert.glsl
